# geo-resolve

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/geo_resolve/: __init__.py  cache.py  cli.py  geocoder.py
src/geo_resolve/providers/: __init__.py  base.py  google.py  google_places.py  google_validation.py  locationiq.py  nominatim.py  opencage.py
tests/: test_geocoder.py
